# relative-protocol

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  ENGINE_SURFACES.md  INTEGRATION.md  JetsamEvent-2025-10-28-134002.ips  LICENSE  LOGGING.md  MIGRATION.md  Package.resolved  Package.swift  README.md  REMAINING_TASKS.md  RelativeProtocol-Bridging-Header.h  RelativeProtocol.podspec  SECURITY.md  TODO.md  UPLOAD_DEBUG_PLAN.md  logs.txt
.build/: build.db  debug.yaml
.github/workflows/: ci.yml  release.yml  security.yml
.tmp/: xcrun_db
Configs/: PacketTunnelExtensionInfo.plist
Docs/: Architecture.md  Changelog.md  DetectorStream.md  GettingStarted.md  LicenseAndUsage.md  LocalTunnelHarness.md  OnDeviceBridge.md  Operations.md  README.md  Reference.md
Example/Example/: ContentView.swift  DiagnosticsView.swift  Example.entitlements  ExampleApp.swift  VPNManager.swift
Example/Example Tunnel/: Example_Tunnel.entitlements  Info.plist  PacketTunnelProvider.swift
Example/Example.xcodeproj/: project.pbxproj
Example/ExampleTests/: ExampleTests.swift  RelativeProtocolCoreSmokeTests.swift
Example/ExampleUITests/: ExampleUITests.swift  ExampleUITestsLaunchTests.swift
PacketTunnel/: BridgeConfiguration.swift  BridgeHarness.swift  BridgeMetrics.swift  GoTun2SocksEngine.swift  PacketTunnel.entitlements  PacketTunnelProvider.swift  PacketTunnelSupport.swift  Tun2SocksAdapter.swift
RelativeProtocol/: Package.swift
RelativeProtocol.xcframework/: Info.plist
RelativeProtocol.xcframework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
RelativeProtocol/RustSources/engine-bridge/: Cargo.toml  build.rs  cbindgen.toml  perf_stacks.txt
RelativeProtocol/RustSources/engine-bridge/src/: device.rs  ffi.rs  flow_manager.rs  lib.rs  logger.rs  policy.rs  quic.rs  telemetry.rs
RelativeProtocol/RustSources/engine-bridge/src/device/: mod.rs  tests.rs
RelativeProtocol/RustSources/engine-bridge/src/dns/: mod.rs  system.rs  tests.rs
RelativeProtocol/RustSources/engine-bridge/src/dns/system/: mod.rs  tests.rs
RelativeProtocol/RustSources/engine-bridge/src/ffi/: mod.rs  tests.rs
RelativeProtocol/RustSources/engine-bridge/src/flow_manager/: batch.rs  checksum.rs  dial.rs  dns.rs  interface.rs  maintenance.rs  mod.rs  packet_builder.rs  state.rs  tests.rs  transport.rs
RelativeProtocol/RustSources/engine-bridge/src/policy/: mod.rs  tests.rs
Scripts/: build-tun2socks.sh  build.sh  coverage.sh  http3_client.py  ios-extension-smoke.sh  quality-gate.sh  quic_probe.sh  regression_suite.sh  traffic_matrix.sh
Scripts/vps-harness/: README.md  droplet_netem.py  droplet_services.py  droplet_telemetry.py  example-traces.json  harness.py  release_gate.py
Sources/Analytics/: AnalyticsStorage.swift  BoundedCache.swift  DNSAssociationCache.swift  DetectionStore.swift  DetectorArmingStateMachine.swift  DetectorRecordDerivation.swift  DetectorRequirements.swift  DetectorStreamContracts.swift  DomainNormalizer.swift  FastPacketSummary.swift  FlowBurstAnalytics.swift  FlowLineageTracker.swift  MetricsRingBuffer.swift  MetricsStore.swift  PacketAnalyticsPipeline.swift  PacketIntelligenceTypes.swift  PacketParser.swift  PacketSampleStream.swift  PacketTelemetryWorker.swift  PathRegimeTracker.swift  PathSampler.swift  PerfBaseline.swift  RichPacketLogStore.swift  ServiceAttribution.swift  SignatureClassifier.swift  TelemetryCapture.swift  TelemetryEnrichmentTypes.swift  TrafficDetection.swift  TunnelStopRecord.swift  TunnelTelemetryMessages.swift
Sources/DataplaneFFI/: DataplaneContracts.swift  DataplaneHandle.swift
Sources/HarnessLocal/: HarnessRunner.swift  LocalFlowAdapter.swift  main.swift  (+4 more)
VPN Bridge/: ContentView.swift  TunnelViewModel.swift  VPN_BridgeApp.swift
VPN Bridge.xcodeproj/: project.pbxproj
VPN BridgeTests/: VPN_BridgeTests.swift
VPN BridgeUITests/: VPN_BridgeUITests.swift  VPN_BridgeUITestsLaunchTests.swift
docs/: api_ref.md  iOS_integration.md  swift_guide.md  testing.md  troubleshooting.md
examples/: crash_reporting_demo.c  ios_vpn_extension.mm  logging_test.c  packet_simulation_demo.c  swift_example.swift
include/: RelativeProtocol.h  ios_vpn.h  module.modulemap
release/: update_package.sh
scripts/: analyze_code.sh  build_ios.sh  fetch_lwip.sh  run_comprehensive_tests.sh  run_integration_tests.sh
src/: CMakeLists.txt  ios_vpn.c  vpn_api.c
src/api/: vpn_api.c  vpn_engine.c
src/classifier/: tls_quic.c
src/core/: logging.c
src/crash/: reporter.c  reporter.mm
src/dns/: cache.c  resolver.c
src/metrics/: ring_buffer.c  ring_buffer_pool.h
src/mtu/: discovery.c
src/nat64/: translator.c
src/packet/: buffer_manager.c  tunnel_provider.mm  utun.c
src/privacy/: guards.c
src/reachability/: monitor.c  monitor.mm
src/socket_bridge/: bridge.c  bridge_ios.mm
src/tcp_udp/: connection_manager.c
tests/: CMakeLists.txt
tests/benchmarks/: benchmark_ring_buffer.cpp
tests/fuzz/: fuzz_packet_parser.cpp
tests/integration/: test_dns_comprehensive.cpp  test_full_stack.cpp  test_ipv6_handling.cpp  test_packet_lifecycle.cpp  test_performance.cpp  test_web_browsing_dns.cpp
tests/ios/: test_buffer_manager  test_buffer_manager.c  test_connection_manager  test_connection_manager.c  test_dns_resolver  test_dns_resolver.c  test_ios_vpn  test_ios_vpn.c  test_nat64_translator  test_nat64_translator.c  test_networkextension_integration.cpp  test_networkextension_integration.mm  test_packet_forwarding  test_packet_forwarding.c
tests/memory/: debug_ring_buffer_memory.cpp  memory_validator.cpp  memory_validator.h  test_memory_leaks.cpp
tests/performance/: test_memory_performance.cpp
tests/security/: test_security_regression.cpp
tests/stress/: stress_concurrent_connections.cpp
tests/unit/: test_connection_manager.cpp  test_dns_resolver.cpp  test_logging.cpp  test_mtu_discovery.cpp  test_nat64.cpp  test_privacy_guards.cpp  test_reachability_monitor.cpp  test_ring_buffer.cpp  test_socket_bridge.cpp  test_traffic_classifier.cpp  test_tunnel_provider.cpp  test_utun.cpp  test_vpn_api.cpp
tests/utils/: test_utilities.cpp  test_utilities.h
(+1402 files in other folders)
