[package]
name = "engine-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Relative Protocol"]
license = "MIT OR Apache-2.0"
description = "Rust networking core for the Relative Protocol tunnel."
homepage = "https://github.com/will4381/relative-protocol"
repository = "https://github.com/will4381/relative-protocol"
build = "build.rs"

[lib]
name = "engine_bridge"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
generate-header = ["dep:cbindgen"]

[dependencies]
anyhow = "1.0"
bitflags = "2.4"
libc = "0.2"
once_cell = "1.19"
smoltcp = { version = "0.11", default-features = false, features = ["std", "verbose", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "medium-ip"] }
thiserror = "1.0"
tokio = { version = "1.36", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
parking_lot = "0.12"

[build-dependencies]
cbindgen = { version = "0.26", optional = true }

[package.metadata.cbindgen]
language = "C"
header = "include/bridge.h"
include-version = false
documentation = true
